[project]
name = "chat"
authors = [
    { name = "ERPCloud.Systems", email = "info@erpcloud.systems"}
]
description = "Custom App For Frappe Chat"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"